Create reset button with .resetButton class in a div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<div id="container"></div>
+		<div class="button">
+			<button class="resetButton">Reset</button>
+		</div>
+
+		<div class="container"></div>
 	</body>
 </html>
