Add ID to container div

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Etch-a-Sketch</title>
 		<link rel="stylesheet" href="styles.css" />
-		<script src="script.js" defer></script>
+		<script src="scripts.js" defer></script>
 	</head>
 	<body>
-		<div class="button">
+		<!-- <div class="button">
 			<button class="resetButton">Reset</button>
-		</div>
+		</div> -->
 
-		<div class="container"></div>
+		<div id="sketch-area" class="container"></div>
 	</body>
 </html>
