--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Etch-a-Sketch</title>
 		<link rel="stylesheet" href="styles.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 		<script src="scripts.js" defer></script>
 	</head>
 	<body>
 		<div id="sketch-area" class="container"></div>
 		<div id="slider-container">
-			<input type="range" min="1" max="100" value="16" class="slider" id="slider">
+			<input
+				type="range"
+				min="1"
+				max="100"
+				value="16"
+				class="slider"
+				id="slider" />
 			<p id="slider-value"></p>
 		</div>
 	</body>
