--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<span class="material-symbols-outlined"> palette </span>
 		</div>
 		<div id="sketch-area" class="container"></div>
-		<div id="slider-container">
+		<div id="container">
 			<input
 				type="range"
 				min="1"
