Add 2 more event listeners for drawing

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<script src="scripts.js" defer></script>
 	</head>
 	<body>
-		<div>
-			<span class="material-symbols-outlined"> grid_on </span>
-			<span class="material-symbols-outlined"> ink_eraser </span>
+		<div class="top container">
+			<span id="grid-toggle" class="material-symbols-outlined"> grid_on </span>
+			<!-- <span class="material-symbols-outlined"> ink_eraser </span>
 			<span class="material-symbols-outlined"> stylus </span>
-			<span class="material-symbols-outlined"> palette </span>
+			<span class="material-symbols-outlined"> palette </span> -->
 		</div>
 		<div id="sketch-area" class="container"></div>
 		<div id="container">
