--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 	<body>
 		<div class="top container">
 			<span id="grid-toggle" class="material-symbols-outlined"> grid_on </span>
-			<!-- <span class="material-symbols-outlined"> ink_eraser </span>
-			<span class="material-symbols-outlined"> stylus </span>
-			<span class="material-symbols-outlined"> palette </span> -->
+			
+			<span id="eraser-toggle" class="material-symbols-outlined">
+				ink_eraser
+			</span>
+			<span id="palette-toggle" class="material-symbols-outlined">
+				palette
+			</span>
 		</div>
 		<div id="sketch-area" class="container"></div>
 		<div id="container">
